# libvec-c

./: .gitignore  CMakeLists.txt  Makefile
src/: internal_lvec_grow.c  internal_vec.h  lvec_any.c  lvec_at.c  lvec_back.c  lvec_capacity.c  lvec_clear.c  lvec_clone.c  lvec_concat.c  lvec_drop.c  lvec_every.c  lvec_filter.c  lvec_find.c  lvec_find_index.c  lvec_find_last.c  lvec_find_last_index.c  lvec_for_each.c  lvec_front.c  lvec_includes.c  lvec_index_of.c  lvec_insert.c  lvec_last_index_of.c  lvec_map.c  lvec_new.c  lvec_none.c  lvec_pop_back.c  lvec_pop_front.c  lvec_push_back.c  lvec_push_front.c  lvec_reduce.c  lvec_remove.c  lvec_reserve.c  lvec_reverse.c  lvec_set.c  lvec_shrink_to_fit.c  lvec_size.c  lvec_sort.c  lvec_with_capacity.c  vec.h
tests/: Makefile
tests/src/: simple_new.c  simple_with_capacity.c
